# cookiecutter-templates

./: .gitignore  LICENSE  README.md  cookiecutter.json
gui/: cookiecutter.json
gui/{{cookiecutter.project_slug}}/: README.md  pylintrc  setup.py
gui/{{cookiecutter.repo_name}}/: Makefile  requirements-dev.txt  setup.py  tox.ini
gui_plot/{{cookiecutter.repo_name}}/: .gitignore  Makefile  pylintrc  pytest.ini  requirements-dev.txt  setup.py
gui_pyside2/: cookiecutter.json
gui_pyside2/{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
gui_pyside2/{{cookiecutter.project_slug}}/.github/workflows/: pythonpackage.yml
gui_pyside2/{{cookiecutter.project_slug}}/requirements/: development.txt
gui_pyside2/{{cookiecutter.project_slug}}/tests/: test_{{ cookiecutter.project_slug }}.py
gui_pyside2/{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  application.py  qt_logger.py
gui_pyside2/{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/view/: console_colors.py  icons.qrc  icons_rc.py  main_window.py
gui_pyside2/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  cli.py  gui.py  {{cookiecutter.project_slug}}.py
gui_pyside6/: cookiecutter.json
gui_pyside6/{{cookiecutter.project_slug}}/: Makefile  (+2 more)
hardware_project/: cookiecutter.json
package/: cookiecutter.json
test_runner/: cookiecutter.json
{{cookiecutter.repo_name}}/: MANIFEST.in  Makefile  setup.py  tox.ini
(+51 files in other folders)
