[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = "{{ cookiecutter.project_slug }}"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
